# rust_boppo_wasm

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
src/: audio.rs  error.rs  executor.rs  hal.rs  host_ffi.rs  internal.rs  lib.rs  logger.rs  timer.rs
src/audio/: audio_handle.rs
src/hal/: buttons.rs  executor.rs  lights.rs  logger.rs  timer.rs
src/host_ffi/: audio.rs  buttons.rs  host_event.rs  lights.rs
src/host_ffi/audio/: audio_event.rs  audio_handle.rs
src/internal/: audio.rs  buttons.rs  host_event.rs  lights.rs  logger.rs  timer.rs  wasm_executor.rs
