[package]
name = "boppo_wasm"
version = "0.1.0"
edition = "2024"

[features]
default = ["wasm_client"]
wasm_client = []

[dependencies]
boppo_core = { git = "https://github.com/boppofun/rust_boppo_core", rev = "2e7ad789" }
edge-executor = "0.4.1"
embassy-time-driver = "0.2.2"
tokio = { version = "1.21", features = ["sync"] }
